# deser

./: CHANGELOG.md  Cargo.toml  Makefile  NOTES.txt  README.md  SERDE.md
.github/workflows/: tests.yml
artwork/: logo.ai
benchmark/: Cargo.toml  Makefile  README.md  profile.json
benchmark/benches/: bench.rs
benchmark/src/: main.rs
compile-times/: README.md  bench.sh
compile-times/deser-version/: Cargo.toml
compile-times/deser-version/src/: main.rs
compile-times/miniserde-version/: Cargo.toml
compile-times/miniserde-version/src/: main.rs
compile-times/serde-version/: Cargo.toml
compile-times/serde-version/src/: main.rs
deser/: AUTHORS  Cargo.toml
deser-debug/: AUTHORS  Cargo.toml
deser-debug/src/: lib.rs
deser-derive/: Cargo.toml
deser-derive/src/: attr.rs  bound.rs  de.rs  lib.rs  ser.rs
deser-json/: AUTHORS  Cargo.toml  README.md
deser-json/src/: de.rs  lib.rs  ser.rs
deser-json/tests/: test_de.rs  test_ser.rs
deser-path/: Cargo.toml  README.md
deser-path/src/: de.rs  lib.rs  ser.rs
deser-path/tests/: basic.rs  de.rs  ser.rs
deser/src/: derive.rs  descriptors.rs  error.rs  event.rs  ext.rs  extensions.rs  lib.rs  macros.rs
deser/src/de/: driver.rs  ignore.rs  impls.rs  mod.rs  owned.rs
deser/src/ser/: chunk.rs  driver.rs  impls.rs  mod.rs  to_debug.rs
deser/tests/: test_custom_map.rs  test_de.rs  test_de_derive.rs  test_derive_unscoped.rs  test_ser.rs  test_ser_derive.rs
examples/derive/: Cargo.toml
examples/derive/src/: main.rs
examples/json/: Cargo.toml
examples/json/src/: main.rs
examples/manual-struct/: Cargo.toml
examples/manual-struct/src/: main.rs
scripts/: bump-version.sh
