[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
deser = { path = "../deser", features = ["derive"] }
deser-json = { path = "../deser-json", features = ["speedups"] }
miniserde = "0.1.21"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"

[profile.bench]
debug = true
split-debuginfo = "packed"

[profile.release]
debug = true
split-debuginfo = "packed"
