[package]
name = "deser-derive"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
version = "0.3.1"
edition = "2021"
description = "Derive extension for deser"
repository = "https://github.com/mitsuhiko/deser"
keywords = ["serialization", "deserialization"]
readme = "README.md"
license = "Apache-2.0"
documentation = "https://docs.rs/deser"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.30"
quote = "1.0.10"
syn = "1.0.80"