[package]
name = "deser"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
version = "0.8.0"
edition = "2021"
description = "An experimental serialization and deserialization library for Rust"
repository = "https://github.com/mitsuhiko/deser"
keywords = ["serialization", "deserialization"]
readme = "README.md"
license = "Apache-2.0"
documentation = "https://docs.rs/deser"

[package.metadata.docs.rs]
all-features = true

[features]
derive = ["deser-derive"]

[dependencies]
deser-derive = { version = "0.8.0", path = "../deser-derive", optional = true }
